[package]
name = "tweet-sense"
version = "0.1.0"
authors = ["Steve Roudebush <roudy@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
base64 = "0.11.0"
http = "0.2.0"
time = "0.1.42"
reqwest = "0.10.1"
futures = "0.3.4"
tokio = "0.2.11"
serde_json = "1.0.48"
urlencoding = "1.0.0"
timer = "0.2.0"
yaml-rust = "0.4.3"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
